2005/07/28	kaffeetisch

	* MANIFEST, META.yml: Remove META.yml from the repository -- let
	MakeMaker generate it on 'make dist'.

	* Makefile.PL: Depend on librsvg 2.99.0, i.e. HEAD of CVS.

	* Rsvg.pm: Some comment and email updates.

	* copyright.pod: Update for 2005.

	* MANIFEST, genmaps.pl: Retire genmaps.pl.

	* MANIFEST, Makefile.PL, maps, rsvg.typemap, rsvg2perl.c,
	rsvg2perl.h: Get rid of the custom GType for the RsvgError enum,
	and use a custom pointer typemap for RsvgHandle instead of a
	custom GBoxed type.

	* t/Rsvg.t, xs/Rsvg.xs: Adapt to upstream API changes: Update
	rsvg_set_default_dpi and rsvg_handle_set_dpi, remove
	rsvg_pixbuf_from_file_*_ex and rsvg_handle_new_gz.

2005/02/24	kaffeetisch

	* META.yml, NEWS, Rsvg.pm: Version 0.04.

2005/01/27 20:17 (+0100) kaffeetisch

	* Rsvg.t: Use absolute paths to fix test failures.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Gnome2-Rsvg.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/09/17 19:36 (+0200) kaffeetisch

	* Makefile.PL, README: Depend on the stable 1.02 instead of the
	unstable 1.01 series of Glib and Gtk2.

2004/09/15 13:12 (+0200) kaffeetisch

	* t/Rsvg.t, t/window.svg, xs/Rsvg.xs: Bind and test
	rsvg_handle_set_base_uri, rsvg_handle_get_base_uri and
	rsvg_handle_get_metadata.  Adjust version checks to refer to
	stable releases.

2004/09/09 13:53 (+0200) kaffeetisch

	* NEWS: Fix an error.

	* t/Rsvg.t, t/window.svg: Work around a librsvg bug by using
	<title> and <desc> tags.

2004/07/24 19:34 (+0200) kaffeetisch

	* NEWS, Rsvg.pm: Version 0.03.

2004/07/24 19:29 (+0200) kaffeetisch

	* t/Rsvg.t: Make the tests work on older versions of librsvg.

2004/07/23 21:13 (+0200) kaffeetisch

	* t/Rsvg.t
	* xs/Rsvg.xs: Bind and test rsvg_set_default_dpi_x_y and
	rsvg_handle_set_dpi_x_y.  Make using gzip'ed SVGs work by allowing
	\0s in the data passed to Gnome2::Rsvg::Handle::write.
