@@ -1,3 +1,12 @@
+2005/09/17	kaffeetisch
+
+	* Makefile.PL: Require librsvg 2.12.0 -- there were just too many
+	API changes.
+
+	* t/Rsvg.t, xs/Rsvg.xs: Revert the rsvg_set_default_dpi and
+	rsvg_handle_set_dpi change -- it was only valid for HEAD of
+	librsvg, but gnome-2-12-branch is what we care about.
+
 2005/07/28	kaffeetisch
 
 	* MANIFEST, META.yml: Remove META.yml from the repository -- let
